# jaxquantum

./: .gitignore  404.html  CNAME  MANIFEST.in  README.md  gen_ref_pages.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  pytest.yml  ruff.yml
about/: _contributors.html  citation.html  community.html  contributors.html  overview.html
advanced/: enr.html  index.html
docs/: gen_ref_pages.py  index.md
docs/about/: _contributors.md  citation.md  community.md  contributors.md  overview.md
docs/documentation/: index.md
docs/getting_started/: examples.md  installation.md  qarray.md  tests.md
docs/js/: mathjax-config.js
docs/reference/: summary.md
docs/scripts/: _plot_style.py  plot_flux_sweep_demo.py  plot_mesolve_demo.py
docs/source/: api.rst  conf.py  index.rst
docs/stylesheets/: landing.css
docs_old/: gen_ref_pages.py
documentation/: index.html
documentation/advanced/: enr.html  index.html
documentation/contributors/: index.html  tests.html
documentation/getting_started/: _installation.html  examples.html  index.html  installation.html  qarray.html  sharp_bits.html
documentation/tutorials/: bosonic_codes.html  circuits.html  devices.html  index.html  sparse_backends.html  visualization.html
experiments/: README.md  cuquantum-tutorial.ipynb
experiments/arbqec/: 1-rep.ipynb
experiments/batch/: 1-demo.ipynb  2-norm.ipynb
experiments/circuit/: .gitignore  1-demo.ipynb  1-tomography-experiments.ipynb  10-jax-control-gkp-reg.ipynb  11-sbs-LUT.ipynb  12-sbs-imperfect-reset.ipynb  13-jax-gkp-state-prep-therm.ipynb  14-sbs-sweep-kerr.ipynb  15-sbs-full-model-sweep.ipynb  15-sbs-full-model.ipynb  16-ECD-ancilla-decay.ipynb  18-sbs-dephasing-reset.ipynb  4-jax-control-cat-state.ipynb  7-jax-control-arbitrary-state.ipynb  8-jax-control-arbitrary-state-v2.ipynb  9-sbs-sweep.ipynb  cd_delay_times.npz  gkp_states.py  sbs.py  sbs_simplified.py  state_prep_opt.py
experiments/codes/: 1-gkp.ipynb
experiments/devices/: 1-demo.ipynb
experiments/distributed/: 1-demo.ipynb
experiments/gkp/: 1-2qb-gate.ipynb
experiments/main/: 0-examples.ipynb  1-single-qubit-rabi-qarray.ipynb  4-diagonalization.ipynb  5-propagator.ipynb  6-excitation-number-restricted.ipynb
experiments/paper/: 1-qarray.ipynb
experiments/sparse/: 1-operations.ipynb  2-sparse-tutorial.ipynb  3-operators.ipynb  4-sparse-dia.ipynb
experiments/testing/: 3-vmap-jit-composition.ipynb  testing.ipynb  tests-tests.ipynb
experiments/tests/: 0-circuits.ipynb
getting_started/: examples.html  index.html  installation.html  sharp_bits.html  tests.html
jaxquantum/: PACKAGE.json  __init__.py
jaxquantum/circuits/: __init__.py  circuits.py  constants.py  gates.py  simulate.py
jaxquantum/codes/: __init__.py  base.py  binomial.py  cat.py  gkp.py  mode.py  qubit.py
jaxquantum/core/: __init__.py  cfunctions.py  conversions.py  cuquantum_impl.py  dims.py  enrs.py  helpers.py  measurements.py  old_qarray.py  operations.py  operators.py  qarray.py  qp_distributions.py  qutip.py  settings.py  solvers.py  sparse_bcoo.py  sparse_dia.py  states.py  visualization.py
jaxquantum/devices/: __init__.py
jaxquantum/quantum/: __init__.py  base.py  solvers.py  visualization.py
jaxquantum/tests/: test_enr_jaxquantum.py
jaxquantum/utils/: __init__.py  cuquantum_util.py  hermgauss.py  units.py  utils.py
reference/: summary.html
reference/jaxquantum/: index.html
search/: search_index.json
test/: test_circuits.py  test_codes.py  test_core_misc.py  test_core_solvers.py  test_cuquantum_backend.py  test_enr_jaxquantum.py  test_measurement.py  test_new_qarray.py  test_qarray.py  test_qp_distributions.py  test_sharding.py  test_sparse_backend.py  test_sparse_bcoo_backend.py  test_sparse_dia_backend.py  test_visualization.py
test-results/: coverage.xml  test-results.xml
test-results/cov_html/: class_index.html  function_index.html  (+56 more)
tutorials/: 0-examples.ipynb  1-single-qubit-rabi-qarray.ipynb  1-single-qubit-rabi.ipynb  2-qarray.ipynb  2-timing-comparisons.ipynb  3-kerr-cat.ipynb  5-propagator.ipynb  demo.ipynb  index.html  testing-shantanu.ipynb
(+248 files in other folders)
