[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxquantum"
version = "0.3.0"
description = "jaxquantum"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Shantanu Jha", email = "shantanu.rajesh.jha@gmail.com" },
    { name = "Shoumik Chowdhury" },
    { name = "Gabriele Rolleri" },
    { name = "Max Hays" },
]
keywords = ["quantum", "computing"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "qutip",
    "jax",
    "diffrax",
    "flax",
    "tqdm",
    "optax",
    "jax-tqdm",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=3.1.0",
    "mypy",
    "pylint",
    "black",
    "coverage",
    "build",
    "twine",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-gen-files",
    "mkdocstrings-python",
    "mkdocs-jupyter",
    "pymdown-extensions",
]
tests = [
    "pytest",
    "pytest-cov",
]
gpu = [
    "jax[cuda13]",
]
tpu = [
    "jax[tpu]",
]

[project.urls]
Documentation = "https://jaxquantum.org"
"Source Code" = "https://github.com/EQuS/jaxquantum"
Tutorials = "https://github.com/EQuS/jaxquantum/tree/main/experiments"

[tool.setuptools.packages.find]
namespaces = true
exclude = ["experiments*"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["E731", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
# Tests marked ``cuquantum`` need the ``cuquantum.densitymat.jax`` extension
# (and a CUDA GPU).  Default CI excludes them; run them locally via
#   pytest test/test_cuquantum_backend.py
# or
#   pytest -m cuquantum
# To skip them everywhere, use `pytest -m "not cuquantum"`.
markers = [
    "cuquantum: tests that require the cuquantum.densitymat.jax extension (GPU)",
]
addopts = "-m 'not cuquantum'"
